[package]
name = "quizzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
crossterm = "0.25.0"
serde = { version = "1.0.151", features = ["derive"] }
text_io = "0.1.12"
toml = "0.5.10"
